--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "axios": "^0.27.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.0.8"
+    "react-icons": "^4.4.0",
+    "react-toastify": "^9.0.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
